frontend: fix background color of the dropdown button on mobile
In darkmode the dropdown button was shown in white, should have
same color as the input field which is dark in darkmode.

--- a/frontends/web/src/components/forms/input-with-dropdown.module.css
+++ b/frontends/web/src/components/forms/input-with-dropdown.module.css
@@ -113,7 +113,7 @@ input.inputField::placeholder {
 
 .dropdownTrigger {
     align-items: center;
-    background-color: #fff;
+    background-color: var(--background-secondary);
     border: 1px solid var(--background-quaternary);
     border-left: hidden;
     display: flex;
